Fix spring boot test and add docker image build