@@ -150,6 +150,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
+          <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+          <argLine> <!-- it allows to override env vars using JUnit pioneer extension on Java 17 and later  -->
+              --add-opens java.base/java.util=ALL-UNNAMED
+              --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>          
           <summaryFile>${project.build.directory}/site/failsafe-summary.xml</summaryFile>
           <includes>
             <include>**/*Test</include>
